# dynasty-dashboard

./: .gitignore  CLAUDE.md  config.py  pyproject.toml  requirements.txt  streamlit_app.py
analysis/draft_sharpe/: analysis.Rmd  data_pipeline.R
analysis/late_round_eval/: analysis.Rmd  analysis.html  charts.R  data_pipeline.R  models.R
analysis/late_round_eval/data/: draft_picks.parquet  eval_df.parquet  model_summary.json  player_stats.parquet  rosters.parquet
analysis/late_round_eval/extraction/: audit.py  enrich_birthdays.py  harmonize.py  match_funnel.py  orchestrate.py  prompts.py  run_matching.py  run_validation.py  schemas.py  validate.py
analysis/late_round_eval/tests/: test_enrich_birthdays.py  test_harmonize.py  (+5 more)
analysis/schedule_2026/: .gitignore  README.md  deck.html
components/: filters.py  league_connect.py  sidebar.py
data/seed/: adp_rankings.csv  fantasycalc.parquet  ktc.parquet  lateround_rankings.csv  merged.parquet  nfl_draft.parquet  projections.parquet
ingestion/: adp.py  blend.py  draft_value.py  fantasycalc.py  ktc.py  ktc_history.py  lateround.py  match_util.py  matching.py  nfl_draft.py  ownership.py  projections.py  roster_impact.py  seed.py  sleeper.py  trade_history.py
tests/: test_adp.py  test_available.py  test_blend.py  test_draft_value.py  test_get_rookies.py  test_match_util.py  test_nfl_draft.py  test_projections.py  test_roster_impact.py  test_seed.py
tools/: refresh_rankings.py
views/: charts.py  draft_board.py  draft_value.py  draft_wizard.py  ranking_comparison.py  roster_impact.py  trade_history.py  waiver_wire.py
(+139 files in other folders)
